[package]
name = "backend_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.31"
serde_urlencoded = "0.7.1"
tower = "0.5.2"

[profile.dev]
debug = 2

