cmake_minimum_required(VERSION 3.24)

set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 20)

cmake_policy(SET CMP0068 NEW)
cmake_policy(SET CMP0135 NEW)

project(nginx_datadog_deps)

option(NGINX_DATADOG_ASM_ENABLED "Build with libddwaf" ON)

# Prefer release with debug info if not specified.
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  set(CMAKE_BUILD_TYPE "RelWithDebInfo")
endif()

if(CMAKE_COMPILER_IS_GNUCXX)
  add_compile_options(-Wno-error=free-nonheap-object)
  add_compile_options(-Wno-error=maybe-uninitialized)
endif()

add_compile_options(-fno-omit-frame-pointer)

# Make curl link against a static zlib (requires cmake 3.24)
set(ZLIB_USE_STATIC_LIBS ON)

# The root of the nginx-datadog repo (parent of cmake/)
get_filename_component(REPO_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../.." ABSOLUTE)

# --- dd-trace-cpp ---
add_subdirectory(${REPO_ROOT}/dd-trace-cpp ${CMAKE_BINARY_DIR}/dd-trace-cpp EXCLUDE_FROM_ALL)

# --- libddwaf ---
if(NGINX_DATADOG_ASM_ENABLED)
  set(LIBDDWAF_BUILD_STATIC ON)
  set(LIBDDWAF_BUILD_SHARED OFF)
  set(LIBDDWAF_TESTING OFF)
  set(LIBDDWAF_ENABLE_LTO OFF)
  add_subdirectory(${REPO_ROOT}/libddwaf ${CMAKE_BINARY_DIR}/libddwaf EXCLUDE_FROM_ALL)

  # Create a static archive from libddwaf objects for Stage 2 consumption.
  # The OBJECT library (libddwaf_objects) doesn't produce a .a file on its own.
  add_library(libddwaf_for_deps STATIC $<TARGET_OBJECTS:libddwaf_objects>)
  set_target_properties(libddwaf_for_deps PROPERTIES
    POSITION_INDEPENDENT_CODE ON
    OUTPUT_NAME "ddwaf_for_deps"
  )
endif()

# --- Header-only deps: rapidjson ---
include(FetchContent)

FetchContent_Declare(
  rapidjson
  GIT_REPOSITORY https://github.com/Tencent/rapidjson.git
  GIT_TAG        ab1842a2dae061284c0a62dca1cc6d5e7e37e346
)
FetchContent_GetProperties(rapidjson)
if(NOT rapidjson_POPULATED)
  FetchContent_Populate(rapidjson)
endif()

# --- Header-only deps: cppcodec ---
FetchContent_Declare(
  cppcodec
  GIT_REPOSITORY https://github.com/tplgy/cppcodec.git
  GIT_TAG        v0.2
)
FetchContent_GetProperties(cppcodec)
if(NOT cppcodec_POPULATED)
  FetchContent_Populate(cppcodec)
endif()

# --- Build the heavy targets ---
# Force build via a top-level ALL target since subdirectories are EXCLUDE_FROM_ALL.
add_custom_target(all_deps ALL)
add_dependencies(all_deps dd-trace-cpp-static)
if(NGINX_DATADOG_ASM_ENABLED)
  add_dependencies(all_deps libddwaf_for_deps)
endif()

# --- Generate deps_manifest.cmake ---
# Uses generator expressions so paths resolve correctly after build.
set(MANIFEST_FILE "${CMAKE_BINARY_DIR}/deps_manifest.cmake")

# Static content (known at configure time)
set(MANIFEST_CONTENT "# Auto-generated by cmake/deps-only/CMakeLists.txt\n")
string(APPEND MANIFEST_CONTENT "# Paths to pre-built dependency artifacts.\n\n")
string(APPEND MANIFEST_CONTENT "set(DEPS_BINARY_DIR \"${CMAKE_BINARY_DIR}\")\n")
string(APPEND MANIFEST_CONTENT "set(DEPS_RAPIDJSON_INCLUDE_DIR \"${rapidjson_SOURCE_DIR}/include\")\n")
string(APPEND MANIFEST_CONTENT "set(DEPS_CPPCODEC_INCLUDE_DIR \"${cppcodec_SOURCE_DIR}\")\n")
string(APPEND MANIFEST_CONTENT "set(DEPS_DD_TRACE_CPP_SOURCE_DIR \"${REPO_ROOT}/dd-trace-cpp\")\n")
string(APPEND MANIFEST_CONTENT "set(DEPS_DD_TRACE_CPP_BINARY_DIR \"${CMAKE_BINARY_DIR}/dd-trace-cpp\")\n")
string(APPEND MANIFEST_CONTENT "set(DEPS_DD_TRACE_CPP_LIB \"$<TARGET_FILE:dd-trace-cpp-static>\")\n")
string(APPEND MANIFEST_CONTENT "set(DEPS_ASM_ENABLED ${NGINX_DATADOG_ASM_ENABLED})\n")
if(NGINX_DATADOG_ASM_ENABLED)
  string(APPEND MANIFEST_CONTENT "set(DEPS_LIBDDWAF_SOURCE_DIR \"${REPO_ROOT}/libddwaf\")\n")
  string(APPEND MANIFEST_CONTENT "set(DEPS_LIBDDWAF_BINARY_DIR \"${CMAKE_BINARY_DIR}/libddwaf\")\n")
  string(APPEND MANIFEST_CONTENT "set(DEPS_LIBDDWAF_LIB \"$<TARGET_FILE:libddwaf_for_deps>\")\n")
endif()

file(GENERATE OUTPUT "${MANIFEST_FILE}" CONTENT "${MANIFEST_CONTENT}")

# vim: et ts=2 sw=2:
